--- a/report/report.bib
+++ b/report/report.bib
@@ -439,3 +439,15 @@
   year={2006},
   organization={ACM}
 }
+
+@phdthesis{nussbaum2014network,
+  title={Network flow problems in planar graphs},
+  author={Nussbaum, Yahav},
+  year={2014},
+  school={PhD thesis, Tel-Aviv University}
+}
+
+@article{lesterfast,
+  title={A Fast Implementation of FR-Dijkstra},
+  author={Lester, Ryan}
+}
