--- a/report/dynamicPlanar.tex
+++ b/report/dynamicPlanar.tex
@@ -1,24 +1,29 @@
 \section{Dynamic Oracles in Directed Planar Graphs}\label{dynamicPlanar}
 In this chapter we show how to extend the oracle from Section \ref{oracle1} to handle
-edge weight changes in \textbf{TODO}. We also show how to extend the oracle from Section
+edge weight changes, edge insertion and deletions in in amortized $\tilde{O}(n^{2/3})$
+time. We also show how to extend the oracle from Section
 \ref{oracle2} to support label changes in expected $O(1)$ time.
 
 \subsection{A dynamic oracle supporting edge weight updates}\label{oracle3}
-We now give a dynamic distance oracle that can support edge weight changes, edge
-insertions and deletion as well as answering queries in amortized $O(n^{2/3}\lg^{5/3}n)$
-time. We assume that no updates will violate the planar embedding of $G$. \\
-\\
+We now give a simple dynamic distance oracle using the same approach as in FR-Djikstra that can support edge weight changes, edge
+insertions and deletions when no updates will violate the planr embedding of $G$. We following theorem:
+\begin{thm}\label{thm4}
+  There is a data structure that can be preprocessed in $O(n\lg n)$ using $O(n\lg n)$
+  space that can update edge weights, insert and delete edges in in amortized
+  $O(n^{2/3}\lg^{5/3} n)$. It can also answer queries $Q(u,\lambda)$ in
+  $\tilde{O}(\min\{\text{size}(\lambda)\cdot n^{2/3}, n\})$ time.
+\end{thm}
 \indent \textit{Data structure}.
-Like the oracle in Section \ref{oracle1}, we construct an $r$-division and maintain a
-dense distance graph of all the pieces.  \\
-
+We construct an $r$-division and maintain a dense distance graph of all the pieces. As
+described in Section \ref{frdjikstra}, we also need to construct the Monge subheaps. \\
+\\
 \indent \textit{Edge weight update}.
-We simply update the weight of the edge and recompute the dense distance graph in which
+We simply update the weight of the edge and, if necessary, recompute the dense distance graph in which
 the modified edge is. \\
 \\
 \indent \textit{Edge deletion}.
 A deleted edge will always happen entirely within a single piece $P$, so we simply remove
-the edge and recompute the dense distance graph of $P$. \\
+the edge and if necessary, we recompute the dense distance graph of $P$. \\
 \\
 \indent \textit{Edge insertion}.
 There are two cases whenever we insert an edge. If the inserted edge is in a single piece
@@ -26,15 +31,19 @@ $P$, we simply insert it. If the endpoints, $x$ and $y$, of the inserted edge be
 pieces, it will violate the property of an $r$-division. That is, any edge going out of
 the piece, must go through a boundary vertex. However, we can overcome with by making $x$
 a boundary vertex of the piece it belongs to. This will not increase the number of holes,
-and we recompute the dense distance graph of $P$. \\
+and we recompute the dense distance graph of $P$ if needed. \\
 \\
 \indent \textit{Query}. To answer the query $Q(u,\lambda)$, we use Djikstra variant
 described in Section \ref{frdjikstra}. Since this algorithm answers the query $Q(u,v)$,
-we need to keep track of the labels on each vertex we visit and keep track of the minimum
-distance to a vertex with label $\lambda$. That is, every time we
-extract a vertex with label $\lambda$ from the global heap, we check if it the distance
-to it is a new minimum. TODO: Store distances from boundary nodes to nodes in each region
-and check total distance.
+we need to do $size(\lambda)$ iterations of the FR-Djikstra step. We answer the query
+$Q(u,v)$ by computing distances from $u$ to all boundary vertices in its piece $P_u$.
+When we have completed the fast Djikstra step, we have distances to the boundary vertices
+of the piece, $P_v$, that $v$ belongs to, and we can compute distances from the boundary
+vertices of $P_v$ to $v$. If $P_u=P_v$, then we also compute the shortest path from $u$
+to $v$ within the piece and we pick the shortest one. \\
+In case $\text{size}(\lambda)$ is $\Omega(n^{1/3}$, we simply run Henzinger et al.
+\cite{henzinger1997faster} algorithm the original graph $G$ and pick the minimal distance
+found to a vertex with label $\lambda$.
 
 \subsubsection{Analysis}
 \textbf{Preprocessing}.
@@ -48,19 +57,30 @@ r)$ preprocessing to compute distances $\delta(u,v)$ in $O(\lg r)$ time where ei
 or $v$ is a boundary node. Since each region has $O(\sqrt{r})$ boundary nodes and $O(1)$
 holes, we can compute all distances in $O(r\lg r)$ time. Since there are $O(n/r)$
 regions, this yields a total running time of $O(nr\lg r/r)=O(n\lg r)$ to construct the
-dense distance graph. \\
+dense distance graph. Using the implementation of Kaplan et al.
+\cite{kaplan2012submatrix}, we can construct the Monge heaps in $O(n\lg n)$ time.\\
 \\
-\textbf{Space}. \\
-\\
-\textbf{Query}. \\
+\textbf{Space}. The dense distance graph has $O(n/\sqrt{r})$ vertices and $O(r)$ edge
+per piece, which is $O(n)$ edges overall. So representing the dense distance graphs takes
+$O(n)$ space. Each vertex occurs in $O(\lg n)$ different heaps and each edge is in one
+data structure. The Monge heaps dominates the total space usage which is $O(n\lg n)$. \\
 \\
 \textbf{Updates}.
  Since we recompute the $r$-division after we have
 done an order of $\sqrt{r}$ operation, we know that each piece cannot at any time have
 more than $O(r)$ edges and $O(\sqrt{r})$ boundary vertices. An amortized analysis over
 all $\sqrt{r}$ operations gives us $O(\frac{n+n\lg r}{\sqrt{r}})=O(n\lg r/\sqrt{r})$ for
-each graph modification.
-
+each graph modification. \\
+\\
+\textbf{Query}. For each query $Q(u,v)$, we know that FR-Djikstra step, i.e. computing
+the shortest paths in the dense distance graph, requires $\tilde{O}(n/\sqrt{r})$ time.
+Computing distances within a piece requires $O(r)$ time using the algorithm of Henzinger
+et al. \cite{henzinger1997faster}. Thus the total time for the query $Q(u,\lambda)$ is
+$\tilde{O}(\text{size}(\lambda)\cdot (r+n/\sqrt{r}))$. \\
+In the case that $\text{size}(\lambda)$ is $\Omega(n^{1/3})$, we run the SSSP algorithm
+of Henzinger et al. in $O(n)$ time. \\
+\\
+If we pick $r=n^{2/3}$, we get Theorem \ref{thm4}.
 
 \subsection{A dynamic oracle supporting label changes}\label{oracle4}
 Recall the oracle described in Section \ref{oracle2}. We now give an oracle that can
